--- a/index.html
+++ b/index.html
@@ -6,9 +6,12 @@
     <title>Simulador Antonio</title>
 </head>
 <body>
-    <h1>Bienvenido al Simulador de Antonio</h1>
-    <p>Aquí podrás practicar tus test de conductor de bus y psicotécnicos.</p>
-
-    <button onclick="alert('Aquí irán los test en breve...')">Empezar Test</button>
+    <h1>Bienvenido al Simulador Antonio</h1>
+    <p>Selecciona el tipo de test que deseas realizar:</p>
+    <ul>
+        <li><a href="teoria.html">Test de Teoría</a></li>
+        <li><a href="lineas.html">Test de Líneas</a></li>
+        <li><a href="psicotecnicos.html">Test de Psicotécnicos</a></li>
+    </ul>
 </body>
 </html>
